--- a/MyMusicStashWeb/MyMusicStashWeb/MyMusicStashWeb.csproj
+++ b/MyMusicStashWeb/MyMusicStashWeb/MyMusicStashWeb.csproj
@@ -145,6 +145,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\SongController.cs" />
     <Compile Include="Interfaces\IPostSqlContext.cs" />
     <Compile Include="Interfaces\ISongSqlContext.cs" />
     <Compile Include="Database Acces Layer\AccountSqlContext.cs" />
@@ -216,7 +218,9 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Home\Login.cshtml" />
+    <Content Include="Views\Account\Login.cshtml" />
+    <Content Include="Views\Song\Index.cshtml" />
+    <Content Include="Views\Account\Register.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
