--- a/MyMusicStashWeb/MyMusicStashWeb/MyMusicStashWeb.csproj
+++ b/MyMusicStashWeb/MyMusicStashWeb/MyMusicStashWeb.csproj
@@ -220,7 +220,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Song\Index.cshtml" />
-    <Content Include="Views\Account\Register.cshtml" />
+    <Content Include="Views\Account\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
