--- a/MyMusicStashWeb/MyMusicStashWeb/MyMusicStashWeb.csproj
+++ b/MyMusicStashWeb/MyMusicStashWeb/MyMusicStashWeb.csproj
@@ -235,8 +235,10 @@
     <Content Include="Views\Account\Edit.cshtml" />
     <Content Include="Views\Account\Index.cshtml" />
     <Content Include="Views\Post\Index.cshtml" />
-    <Content Include="Views\Post\Details.cshtml" />
+    <Content Include="Views\Post\Reactions.cshtml" />
     <Content Include="Views\Post\Create.cshtml" />
+    <Content Include="Views\Account\Activate.cshtml" />
+    <Content Include="Views\Post\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
