--- a/MyMusicStashWeb/MyMusicStashWeb/MyMusicStashWeb.csproj
+++ b/MyMusicStashWeb/MyMusicStashWeb/MyMusicStashWeb.csproj
@@ -239,6 +239,7 @@
     <Content Include="Views\Post\Create.cshtml" />
     <Content Include="Views\Account\Activate.cshtml" />
     <Content Include="Views\Post\Delete.cshtml" />
+    <Content Include="Views\Shared\_navbarUser.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
