--- a/MyMusicStashWeb/MyMusicStashWeb/MyMusicStashWeb.csproj
+++ b/MyMusicStashWeb/MyMusicStashWeb/MyMusicStashWeb.csproj
@@ -146,8 +146,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\MediaController.cs" />
+    <Compile Include="Controllers\PersonController.cs" />
     <Compile Include="Controllers\PostController.cs" />
     <Compile Include="Controllers\SongController.cs" />
+    <Compile Include="Interfaces\IMediaSqlContext.cs" />
+    <Compile Include="Database Acces Layer\MediaSqlContext.cs" />
     <Compile Include="Email\Email.cs" />
     <Compile Include="Email\EmailLogic.cs" />
     <Compile Include="Email\EmailServer.cs" />
@@ -168,15 +172,19 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Image.cs" />
+    <Compile Include="Models\Media.cs" />
     <Compile Include="Models\Song.cs" />
     <Compile Include="Models\Person.cs" />
     <Compile Include="Models\Post.cs" />
     <Compile Include="Database Acces Layer\PostSqlContext.cs" />
+    <Compile Include="Models\Video.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Reaction.cs" />
     <Compile Include="Database Acces Layer\ReactionSqlContext.cs" />
     <Compile Include="Database Acces Layer\SongSqlContext.cs" />
     <Compile Include="Repository%27s\AccountRepository.cs" />
+    <Compile Include="Repository%27s\MediaRepository.cs" />
     <Compile Include="Repository%27s\PersonRepository.cs" />
     <Compile Include="Repository%27s\PostRepository.cs" />
     <Compile Include="Repository%27s\ReactionRepository.cs" />
@@ -240,6 +248,14 @@
     <Content Include="Views\Account\Activate.cshtml" />
     <Content Include="Views\Post\Delete.cshtml" />
     <Content Include="Views\Shared\_navbarUser.cshtml" />
+    <Content Include="Views\Media\Index.cshtml" />
+    <Content Include="Views\Media\Delete.cshtml" />
+    <Content Include="Views\Media\CreateVideo.cshtml" />
+    <Content Include="Views\Media\CreateImage.cshtml" />
+    <Content Include="Views\Person\Edit.cshtml" />
+    <Content Include="Views\Person\Index.cshtml" />
+    <Content Include="Views\Post\Edit.cshtml" />
+    <Content Include="Views\Song\CreateRandom.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
