--- a/MyMusicStashWeb/MyMusicStashWeb/packages.config
+++ b/MyMusicStashWeb/MyMusicStashWeb/packages.config
@@ -21,7 +21,9 @@
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net45" />
+  <package id="postcodeapi.net" version="1.1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
