--- a/MyMusicStashWeb/UnitTestProjectMyMusicStash/UnitTestProjectMyMusicStash.csproj
+++ b/MyMusicStashWeb/UnitTestProjectMyMusicStash/UnitTestProjectMyMusicStash.csproj
@@ -62,6 +62,9 @@
       <Name>MyMusicStashWeb</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
